# PIC4rl_gym

./: .gitignore  README.md
gazebo_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gazebo_sim/config/: sim_param.yaml  sim_params.yaml
gazebo_sim/env-hooks/: gazebo_sim.dsv.in
gazebo_sim/launch/: simulation.launch.py
gazebo_sim/media/meshes/: cubicle_wall.mtl  office.mtl
gazebo_sim/models/AdjTable/: model.sdf
gazebo_sim/models/AnesthesiaMachine/: model.sdf
gazebo_sim/models/BedTable/: model.sdf
gazebo_sim/models/BedsideTable/: model.sdf
gazebo_sim/models/BedsideTable2/: model.sdf
gazebo_sim/models/CGMClassic/: model.sdf
gazebo_sim/models/ColBumper/: model.sdf
gazebo_sim/models/Drawer/: model.sdf
gazebo_sim/models/ElderLadyPatient/: model.sdf
gazebo_sim/models/ElderMalePatient/: model.sdf
gazebo_sim/models/ElectronicsRecycling/: model.sdf
gazebo_sim/models/ExitSign/: model.sdf
gazebo_sim/models/Extinguisher cabinet/: model.sdf
gazebo_sim/models/FemaleVisitor/: model.sdf
gazebo_sim/models/FemaleVisitorSit/: model.sdf
gazebo_sim/models/FreezerComp/: model.sdf
gazebo_sim/models/FreezerCondenser/: model.sdf
gazebo_sim/models/GarbagePileV1/: model.sdf
gazebo_sim/models/GarbagePileV2/: model.sdf
gazebo_sim/models/HOSPI/: model.sdf
gazebo_sim/models/Handrail/: model.sdf
gazebo_sim/models/HospitalPillow/: model.sdf
gazebo_sim/models/InstrumentCart1/: model.sdf
gazebo_sim/models/InstrumentCart2/: model.sdf
gazebo_sim/models/KitchenSink/: model.sdf
gazebo_sim/worlds/: apples.world  bieta.world  bookstore.world  city.world  curved_vineyard.world  empty.world  factory.world  hospital.world  hospital_two_floors.world  indoor.world  indoor_stage.model  indoor_stage2.model  larger_to_smaller_vineyard.world  lattuga.world  lavanda_terrain3.world  new_indoor.world  new_indoor_dynamic.world  office.world  outdoor.world  pear_filare_medio.world  pear_filare_stretto.world  pear_terrain2.world  pergola.world  pero.world  pine_terrain3.world  simple_vineyard.world  single_curved_vineyard.world  small_house.world  social_scenarios.world  test.world  tree_terrain2.world  tunnel.world  vineyard.world  vineyard_mix.world  vineyard_mix_new.world  vineyard_mix_trees.world  vineyard_new.world  vineyard_trees_background.world  wall_tunnel.world  wall_tunnel_hard.world  (+2 more)
pic4rl/: CMakeLists.txt  package.xml  setup.cfg  setup.py
pic4rl/config/: main_params.yaml  params.yaml  training_params.yaml
pic4rl/data/: new_indoor.yaml
pic4rl/launch/: pic4rl_starter.launch.py
pic4rl/pic4rl/: pic4rl_starter.py  sensors.py  trainer.py
pic4rl/scripts/: go_to_pose_camera  go_to_pose_lidar  vineyards_camera
(+434 files in other folders)
